productize the package
- make it named 'pytoggl' through and through
- fix tests
    - both 2.x and 3.x
- add packaging using pbr

Signed-off-by: Max Kovgan <max@opsguru.io>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-*.pyc
+*.py[co]
 __pycache__
 /build/
 /dist/
 /MANIFEST
 /.coverage
+/.cache/
+/.eggs/
+/.idea/
+/.tox/
+AUTHORS
+ChangeLog
+README
+*.egg-info
