rename to pytoggle
- to not clash with Pipy package 'PyToggl'

Signed-off-by: Max Kovgan <max@opsguru.io>
SemVer: break rename package name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = pytoggl
+name = pytoggle
 author = Victor Timohin
 author-email = vvt@opsguru.io
 summary = PyToggl Toggl API Library
 description-file = README
-home-page = http://github.com/ops-guru/pytoggl
+home-page = http://github.com/ops-guru/pytoggle
 license = MIT
 requires = 
     iso8601
@@ -21,8 +21,8 @@ classifier =
     Operating System :: POSIX
     Programming Language :: Python
 keywords =
-    pytoggl
+    pytoggle
 
 [files]
 packages =
-    pytoggl
+    pytoggle
