--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist = py36,27
+envlist = py36,py27
 
-[testenv]
+[testenv:py36]
 #changedir=test
 passenv =
     PBR_VERSION
@@ -10,12 +10,29 @@ deps= -rrequirements_test.txt
 #commands= py.test -v {posargs}
 skip_install = false
 whitelist_externals =
-    /bin/sh
-    /bin/rm
+    sh
+    rm
 commands =
-    /bin/rm -rf build dist
+    rm -rf build dist/*py3-*.whl
     python setup.py bdist_wheel
-    /bin/sh -c "pip install --upgrade dist/*.whl"
+    sh -c "pip install --upgrade dist/*py3-*.whl"
+    py.test -v {posargs}
+
+[testenv:py27]
+#changedir=test
+passenv =
+    PBR_VERSION
+    PYTHONPATH
+deps= -rrequirements_test.txt
+#commands= py.test -v {posargs}
+skip_install = false
+whitelist_externals =
+    sh
+    rm
+commands =
+    rm -rf build dist/*py2-*.whl
+    python setup.py bdist_wheel
+    sh -c "pip install --upgrade dist/*py2-*.whl"
     py.test -v {posargs}
 
 [buildenv]
@@ -27,12 +44,12 @@ deps= -rrequirements_build.txt
 #commands= py.test -v {posargs}
 skip_install = false
 whitelist_externals =
-    /bin/sh
-    /bin/rm
+    sh
+    rm
 commands =
-    /bin/rm -rf build dist
+    rm -rf build dist
     python setup.py bdist_wheel
-    /bin/sh -c "cd dist; dir2pi --no-symlink ."
+    sh -c "cd dist; dir2pi --no-symlink ."
 
 [testenv:flake8]
 #changedir=test
@@ -40,12 +57,12 @@ deps= -rrequirements_test.txt
 #commands= py.test --flake8 -v {posargs}
 skip_install = false
 whitelist_externals =
-    /bin/sh
-    /bin/rm
+    sh
+    rm
 commands =
-    /bin/rm -rf build dist
+    rm -rf build dist
     python setup.py bdist_wheel
-    /bin/sh -c "pip install --upgrade dist/*.whl"
+    sh -c "pip install --upgrade dist/*.whl"
     py.test --flake8 -v {posargs}
 
 [pytest]
@@ -61,10 +78,10 @@ max-complexity = 15
 deps= -rrequirements_test.txt
 skip_install = false
 whitelist_externals =
-    /bin/sh
-    /bin/rm
+    sh
+    rm
 commands =
-    /bin/rm -rf build dist
+    rm -rf build dist
     python setup.py bdist_wheel
-    /bin/sh -c "pip install --upgrade dist/*.whl"
+    sh -c "pip install --upgrade dist/*.whl"
     py.test test -v {posargs}
