--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,49 @@
 [tox]
-envlist = py36,py27
+envlist = py34,py35,py36,py27
+skip_missing_interpreters = True
+
+[testenv:py34]
+#changedir=test
+passenv =
+    PBR_VERSION
+    PYTHONPATH
+    SSH_AUTH_SOCK
+deps= -rrequirements_test.txt
+#commands= py.test -v {posargs}
+skip_install = false
+whitelist_externals =
+    sh
+    rm
+commands =
+    rm -rf build dist/*py3-*.whl
+    python setup.py bdist_wheel
+    sh -c "pip install --upgrade dist/*py3-*.whl"
+    py.test -v {posargs}
+
+[testenv:py35]
+#changedir=test
+passenv =
+    PBR_VERSION
+    PYTHONPATH
+    SSH_AUTH_SOCK
+deps= -rrequirements_test.txt
+#commands= py.test -v {posargs}
+skip_install = false
+whitelist_externals =
+    sh
+    rm
+commands =
+    rm -rf build dist/*py3-*.whl
+    python setup.py bdist_wheel
+    sh -c "pip install --upgrade dist/*py3-*.whl"
+    py.test -v {posargs}
 
 [testenv:py36]
 #changedir=test
 passenv =
     PBR_VERSION
     PYTHONPATH
+    SSH_AUTH_SOCK
 deps= -rrequirements_test.txt
 #commands= py.test -v {posargs}
 skip_install = false
@@ -23,6 +61,7 @@ commands =
 passenv =
     PBR_VERSION
     PYTHONPATH
+    SSH_AUTH_SOCK
 deps= -rrequirements_test.txt
 #commands= py.test -v {posargs}
 skip_install = false
@@ -40,6 +79,7 @@ commands =
 passenv =
     PBR_VERSION
     PYTHONPATH
+    SSH_AUTH_SOCK
 deps= -rrequirements_build.txt
 #commands= py.test -v {posargs}
 skip_install = false
@@ -69,6 +109,7 @@ commands =
 passenv =
     PBR_VERSION
     PYTHONPATH
+    SSH_AUTH_SOCK
 flake8-ignore = E501 F401 F841
 pep8ignore = E501 F401 F841
 pep8maxlinelength = 120
