fix regex for package name detection
Signed-off-by: Max Kovgan <max@opsguru.io>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = py34,py35,py36,py27
-skip_missing_interpreters = True
+skip_missing_interpreters=True
 
 [testenv:py34]
 #changedir=test
@@ -15,9 +15,9 @@ whitelist_externals =
     sh
     rm
 commands =
-    rm -rf build dist/*py3-*.whl
+    rm -rf build dist/*-py3-*.whl
     python setup.py bdist_wheel
-    sh -c "pip install --upgrade dist/*py3-*.whl"
+    sh -c "pip install --upgrade dist/*-py3-*.whl"
     py.test -v {posargs}
 
 [testenv:py35]
@@ -33,9 +33,9 @@ whitelist_externals =
     sh
     rm
 commands =
-    rm -rf build dist/*py3-*.whl
+    rm -rf build dist/*-py3-*.whl
     python setup.py bdist_wheel
-    sh -c "pip install --upgrade dist/*py3-*.whl"
+    sh -c "pip install --upgrade dist/*-py3-*.whl"
     py.test -v {posargs}
 
 [testenv:py36]
@@ -51,9 +51,9 @@ whitelist_externals =
     sh
     rm
 commands =
-    rm -rf build dist/*py3-*.whl
+    rm -rf build dist/*-py3-*.whl
     python setup.py bdist_wheel
-    sh -c "pip install --upgrade dist/*py3-*.whl"
+    sh -c "pip install --upgrade dist/*-py3-*.whl"
     py.test -v {posargs}
 
 [testenv:py27]
@@ -69,9 +69,9 @@ whitelist_externals =
     sh
     rm
 commands =
-    rm -rf build dist/*py2-*.whl
+    rm -rf build dist/*-py2-*.whl
     python setup.py bdist_wheel
-    sh -c "pip install --upgrade dist/*py2-*.whl"
+    sh -c "pip install --upgrade dist/*-py2-*.whl"
     py.test -v {posargs}
 
 [buildenv]
